<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroud_login"
    android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:textColor="@color/secondaryTextColor"
        android:background="@color/background_log_screen"
        android:text="@string/note_register" />
    <LinearLayout
        android:id="@+id/login_layout_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/background_log_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_name"
                android:gravity="center"
                android:fontFamily="cursive"
                android:textStyle="bold|italic"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/login_title_name"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/secondaryLightColor"
                android:textSize="@dimen/text_size_extra_large"
                android:text="@string/title_register_screen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/register_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/user_name"
                    android:singleLine="true"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                style="@style/RaisedButton"
                android:text="@string/sign_up"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryTextColor"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/have_account"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sign_up_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_short"
                android:text="@string/login"
                android:textColor="@color/secondaryLightColor"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>