<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroud_login"
    android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:textColor="@color/secondaryTextColor"
        android:background="@color/background_log_screen"
        android:text="@string/note_login" />
    <LinearLayout
        android:id="@+id/login_layout_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/background_log_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_name"
                android:gravity="center"
                android:fontFamily="cursive"
                android:textStyle="bold|italic"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/login_title_name"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/secondaryLightColor"
                android:textSize="@dimen/text_size_extra_large"
                android:text="@string/brand_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/user_name"
                    android:singleLine="true"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:layout_margin="@dimen/margin_normal"
                android:elevation="20dp"

                android:src="@drawable/icon_facebook"/>
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/login_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/icon_twitter"/>
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/login_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/icon_gmail"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                style="@style/RaisedButton"
                android:text="@string/login"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textStyle="italic|bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryTextColor"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/not_account"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginLeft="@dimen/margin_short"
                android:textColor="@color/secondaryLightColor"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>