<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TutorialActivity">
    <include layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/background_log_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_name"
                android:gravity="center"
                android:fontFamily="cursive"
                android:textStyle="bold|italic"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/login_title_name"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/secondaryLightColor"
                android:textSize="@dimen/text_size_extra_large"
                android:text="@string/tutorial_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/tutorial_content"/>
        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>