<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryTextColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_log_screen"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_food_title"
                android:gravity="center"
                android:fontFamily="cursive"
                android:textStyle="bold|italic"
                android:textColor="@color/secondaryColor"
                android:textSize="30sp"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/text_size_extra_large"
                android:text="@string/brand_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_log_screen"
            android:layout_marginTop="@dimen/margin_long">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/food_menu_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:layout_marginLeft="@dimen/margin_long"
                android:layout_marginRight="@dimen/margin_long"
                android:hint="@string/search_menu_food"/>
        </LinearLayout>
    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_short"
                android:background="@color/background_log_screen"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginRight="@dimen/margin_short">
                    <LinearLayout
                        android:id="@+id/food_menu_menu_food"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/icon_food_menu_eat"></LinearLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/secondaryLightColor"
                    android:layout_marginLeft="@dimen/margin_short">
                    <LinearLayout
                        android:id="@+id/food_menu_menu_drink"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/icon_food_menu_drink"></LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/primaryLightColor"
                            android:textSize="@dimen/text_size_large"
                            android:paddingLeft="@dimen/padding_extra_long"
                            android:text="@string/menu_food_food_title"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/food_menu_menu_food_expand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_extra_large"
                            android:gravity="right"
                            android:text="@string/menu_food_expand"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="138dp">
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/food_menu_menu_food_recycleview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/primaryLightColor"
                            android:textSize="@dimen/text_size_large"
                            android:paddingLeft="@dimen/padding_extra_long"
                            android:text="@string/menu_food_drink_title"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/food_menu_menu_drink_expand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_extra_large"
                            android:gravity="right"
                            android:text="@string/menu_food_expand"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="138dp">
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/food_menu_menu_drink_recycleview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>